--- a/css/food.css
+++ b/css/food.css
@@ -67,6 +67,11 @@
   text-align: left;
 }
 
+.menu-subtitle {
+  margin-top: 30px;
+  font-size: 18px;
+}
+
 .menu-text {
   margin-top: 32px;
   padding-top: 22px;
