--- a/css/food.css
+++ b/css/food.css
@@ -13,7 +13,7 @@
 
 .menu-header h1 {
   text-align: center;
-  font: 25px;
+  font-size: 29px;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
@@ -88,3 +88,84 @@
   margin-bottom: 16px;
   border-bottom: 1px dashed rgba(0,0,0,0.40) ;
 }
+
+
+/* Iphone / half-screen */
+@media (min-width: 768px){
+  .menu-header h1 {
+  font: 29px;
+}
+}
+
+/* Large tablet / Ipad Pro */
+@media (min-width: 1024px) {
+
+  .menu-list { 
+  max-width: 1100px;
+}
+
+  .menu-header h1 {
+  font-size: 47px;
+}
+
+.menu-header p {
+  font-size: 22px;
+}
+
+.item-name { 
+  font-size: 27px;
+  margin-bottom: 12px;
+}
+
+.item-desc {
+  font-size: 20px;
+}
+
+.item-price {
+  font-size: 25px;
+}
+
+.menu-subtitle {
+  margin-top: 30px;
+  font-size: 26px;
+}
+
+}
+
+/* Desktop */
+  @media (min-width: 1280px) {
+
+    .menu-list { 
+  max-width: 2600px;
+}
+
+  .menu-header h1 {
+  font-size: 60px;
+}
+
+.menu-header p {
+  font-size: 28px;
+}
+
+.item-name { 
+  font-size: 33px;
+  margin-bottom: 12px;
+}
+
+.item-desc {
+  font-size: 25px;
+}
+
+.item-price {
+  font-size: 33px;
+}
+
+.menu-subtitle {
+  margin-top: 30px;
+  font-size: 26px;
+}
+
+.menu-text p {
+  text-align: center;
+}
+  }
