--- a/css/menu.css
+++ b/css/menu.css
@@ -128,16 +128,144 @@
 
 
 
-/* Tablet: 3 columns */
-@media (min-width: 700px){
+/* Iphone / half-screen */
+@media (min-width: 768px){
   .menu-grid{
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .menu-title h1 {
+  font-size: 31px;
+  margin-bottom: 10px;
 }
 
-/* Desktop: 6 columns */
-@media (min-width: 1100px){
+.menu-title p {
+  font-size: 17px;
+}
+
+.hero-button { 
+  font-size: 17px;
+  padding: 15px 18px;
+}
+
+.section-title h2 {
+  font-size: 29px;
+  margin-bottom: 7px;
+}
+
+.section-title p {
+  font-size: 17px;
+}
+
+.menu-button { 
+  font-size: 17px;
+}
+}
+
+
+
+/* Large tablet / Ipad Pro */
+@media (min-width: 1024px) {
   .menu-grid{
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .menu-title h1 {
+  font-size: 41px;
+  margin-bottom: 10px;
+  }
+
+  .menu-title p {
+    font-size: 20px;
+  }
+
+  .hero-button { 
+    font-size: 22px;
+    padding: 17px 20px;
+  }
+
+  .section-title h2 {
+    font-size: 39px;
+    margin-bottom: 7px;
+  }
+
+  .section-title p {
+    font-size: 23px;
+    margin-bottom: 10px;
+  }
+
+  .menu-button { 
+    font-size: 24px;
+  }
+
+  .menu-card img {
+    height: 140px;
+    width: 140px;
+    margin: 0 auto 15px;
   }
 }
+
+/* Desktop */
+  @media (min-width: 1280px) {
+
+  .menu-grid{
+    grid-template-columns: repeat(6, 1fr);
+  }    
+
+  .hero-menu {
+  position: relative;
+  width: 100%;
+  height: 800px;
+  overflow: hidden;
+  }
+
+  .hero-menu img {
+    height: 800px;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .menu-title {
+    padding-left: 80px;
+  }
+
+  .menu-title h1 {
+  font-size: 48px;
+  margin-bottom: 10px;
+
+  }
+
+  .menu-title p {
+    font-size: 24px;
+  }
+
+  .hero-button { 
+    font-size: 24px;
+    padding: 17px 20px;
+  }
+
+  .section-title h2 {
+    font-size: 42px;
+    margin-bottom: 10px;
+  }
+
+  .section-title p {
+    font-size: 25px;
+  }
+
+  .section-title { 
+    margin-bottom: 60px;
+  }
+
+  .menu-button { 
+    font-size: 28px;
+    padding: 12px 16px;
+  }
+
+  .menu-card img {
+    height: 160px;
+    width: 160px;
+    margin: 0 auto 15px;
+  }
+
+  }
